--- a/wiki/note-git-使用记录/index.html
+++ b/wiki/note-git-使用记录/index.html
@@ -35,13 +35,13 @@
 <p>
 蒋鑫. Git权威指南 机械工业出版社. Kindle 版本. 
 </p>
-<div id="outline-container-orgfa418cb" class="outline-2">
-<h2 id="orgfa418cb">git 独奏</h2>
-<div class="outline-text-2" id="text-orgfa418cb">
+<div id="outline-container-orgbb2bffe" class="outline-2">
+<h2 id="orgbb2bffe">git 独奏</h2>
+<div class="outline-text-2" id="text-orgbb2bffe">
 </div>
-<div id="outline-container-org95d5e9b" class="outline-3">
-<h3 id="org95d5e9b">git 初始化</h3>
-<div class="outline-text-3" id="text-org95d5e9b">
+<div id="outline-container-orgc33300c" class="outline-3">
+<h3 id="orgc33300c">git 初始化</h3>
+<div class="outline-text-3" id="text-orgc33300c">
 <ul class="org-ul">
 <li><p>
 git init 
@@ -97,9 +97,9 @@ git config &lt;session&gt;.&lt;key&gt;
 </ul>
 </div>
 </div>
-<div id="outline-container-orgf5a1e2b" class="outline-3">
-<h3 id="orgf5a1e2b">git 暂存区</h3>
-<div class="outline-text-3" id="text-orgf5a1e2b">
+<div id="outline-container-org4c4acc2" class="outline-3">
+<h3 id="org4c4acc2">git 暂存区</h3>
+<div class="outline-text-3" id="text-org4c4acc2">
 
 <div class="figure">
 <p><img src="http://7xpyfe.com1.z0.glb.clouddn.com/2017101515080826245091.png" alt="2017101515080826245091.png" />
@@ -169,9 +169,9 @@ git stash
 </ul>
 </div>
 </div>
-<div id="outline-container-org6011a1a" class="outline-3">
-<h3 id="org6011a1a">git reset 重置</h3>
-<div class="outline-text-3" id="text-org6011a1a">
+<div id="outline-container-orgb2fd7f8" class="outline-3">
+<h3 id="orgb2fd7f8">git reset 重置</h3>
+<div class="outline-text-3" id="text-orgb2fd7f8">
 <ol class="org-ol">
 <li>git reset HEAD&lt;path&gt;  相当于取消 git add &lt;paths&gt; 操作</li>
 
@@ -193,9 +193,9 @@ git reset --hard master@{2}  重置master所有位置为两次改变之前的值
 </div>
 </div>
 
-<div id="outline-container-orga35113f" class="outline-3">
-<h3 id="orga35113f">git 检出</h3>
-<div class="outline-text-3" id="text-orga35113f">
+<div id="outline-container-orgcc54441" class="outline-3">
+<h3 id="orgcc54441">git 检出</h3>
+<div class="outline-text-3" id="text-orgcc54441">
 <ul class="org-ul">
 <li><p>
 git checkout branch_name
@@ -208,9 +208,9 @@ git branch -v
 </ul>
 </div>
 </div>
-<div id="outline-container-org79dc528" class="outline-3">
-<h3 id="org79dc528">git 恢复进度</h3>
-<div class="outline-text-3" id="text-org79dc528">
+<div id="outline-container-org174609e" class="outline-3">
+<h3 id="org174609e">git 恢复进度</h3>
+<div class="outline-text-3" id="text-org174609e">
 <ul class="org-ul">
 <li><p>
 git stash
@@ -239,9 +239,9 @@ git stash branch &lt;branchname&gt;  基于进度创建分支
 </div>
 </div>
 
-<div id="outline-container-orgadc3657" class="outline-3">
-<h3 id="orgadc3657">git 基础操作</h3>
-<div class="outline-text-3" id="text-orgadc3657">
+<div id="outline-container-org18d9a0b" class="outline-3">
+<h3 id="org18d9a0b">git 基础操作</h3>
+<div class="outline-text-3" id="text-org18d9a0b">
 <ul class="org-ul">
 <li><p>
 删除文件
@@ -325,9 +325,9 @@ git archive -o partial.tar HEAD src doc  只归档两个文件夹
 </div>
 </div>
 
-<div id="outline-container-org7c98446" class="outline-3">
-<h3 id="org7c98446">git tools</h3>
-<div class="outline-text-3" id="text-org7c98446">
+<div id="outline-container-org1191e06" class="outline-3">
+<h3 id="org1191e06">git tools</h3>
+<div class="outline-text-3" id="text-org1191e06">
 <p>
 版本库浏览器能更好看提交关系图
 </p>
@@ -367,9 +367,9 @@ git bisect start
 </div>
 </div>
 
-<div id="outline-container-orgaa4046b" class="outline-3">
-<h3 id="orgaa4046b">改变历史</h3>
-<div class="outline-text-3" id="text-orgaa4046b">
+<div id="outline-container-org938b5d3" class="outline-3">
+<h3 id="org938b5d3">改变历史</h3>
+<div class="outline-text-3" id="text-org938b5d3">
 <ul class="org-ul">
 <li><p>
 单步悔棋
@@ -394,9 +394,9 @@ git commit -m "new reason "
 </div>
 </div>
 
-<div id="outline-container-org0a2d5b5" class="outline-3">
-<h3 id="org0a2d5b5">git克隆</h3>
-<div class="outline-text-3" id="text-org0a2d5b5">
+<div id="outline-container-orgf3923c8" class="outline-3">
+<h3 id="orgf3923c8">git克隆</h3>
+<div class="outline-text-3" id="text-orgf3923c8">
 <ul class="org-ul">
 <li><p>
 git clone
@@ -420,13 +420,13 @@ git clone --mirror &lt;rep&gt; dir
 </div>
 </div>
 
-<div id="outline-container-org29c108a" class="outline-2">
-<h2 id="org29c108a">git 和声</h2>
-<div class="outline-text-2" id="text-org29c108a">
+<div id="outline-container-orgdb3643a" class="outline-2">
+<h2 id="orgdb3643a">git 和声</h2>
+<div class="outline-text-2" id="text-orgdb3643a">
 </div>
-<div id="outline-container-org5603867" class="outline-3">
-<h3 id="org5603867">git 工作协调</h3>
-<div class="outline-text-3" id="text-org5603867">
+<div id="outline-container-orgc427aa9" class="outline-3">
+<h3 id="orgc427aa9">git 工作协调</h3>
+<div class="outline-text-3" id="text-orgc427aa9">
 <ul class="org-ul">
 <li>支持的协议
 智能协议: 数据传输过程中有清晰的进度显示,按需传输，传输量小，速度快 (ssh,git,file//)  
@@ -466,9 +466,9 @@ git push
 </div>
 
 
-<div id="outline-container-orgafd9019" class="outline-3">
-<h3 id="orgafd9019">git 冲突解决</h3>
-<div class="outline-text-3" id="text-orgafd9019">
+<div id="outline-container-orga9adeba" class="outline-3">
+<h3 id="orga9adeba">git 冲突解决</h3>
+<div class="outline-text-3" id="text-orga9adeba">
 <p>
 git merge
 </p>
@@ -532,13 +532,13 @@ git add / git reset
 </div>
 </div>
 
-<div id="outline-container-org477b1f4" class="outline-2">
-<h2 id="org477b1f4"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
-<div class="outline-text-2" id="text-org477b1f4">
+<div id="outline-container-org8fb28af" class="outline-2">
+<h2 id="org8fb28af"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
+<div class="outline-text-2" id="text-org8fb28af">
 </div>
-<div id="outline-container-orgd02a7bb" class="outline-3">
-<h3 id="orgd02a7bb">git ls-files 乱码问题</h3>
-<div class="outline-text-3" id="text-orgd02a7bb">
+<div id="outline-container-org9b31aad" class="outline-3">
+<h3 id="org9b31aad">git ls-files 乱码问题</h3>
+<div class="outline-text-3" id="text-org9b31aad">
 <p>
 在 <code>~/.gitconfig</code> 中添加如下内容
 </p>
