--- a/wiki/note-spark-use/index.html
+++ b/wiki/note-spark-use/index.html
@@ -35,9 +35,9 @@
 <p>
 Spark快速大数据分析[美] 卡劳（Holden Karau）
 </p>
-<div id="outline-container-org24d6826" class="outline-2">
-<h2 id="org24d6826">what is spark</h2>
-<div class="outline-text-2" id="text-org24d6826">
+<div id="outline-container-org6c64b2c" class="outline-2">
+<h2 id="org6c64b2c">what is spark</h2>
+<div class="outline-text-2" id="text-org6c64b2c">
 <p>
 spark 是一个用来实现快速而通用的集群计算的平台
 </p>
@@ -66,16 +66,16 @@ python shell / scala shell</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org86716b0" class="outline-2">
-<h2 id="org86716b0">RDD</h2>
-<div class="outline-text-2" id="text-org86716b0">
+<div id="outline-container-org4710387" class="outline-2">
+<h2 id="org4710387">RDD</h2>
+<div class="outline-text-2" id="text-org4710387">
 <p>
 RDD(resilient distributed dataset)
 </p>
 </div>
-<div id="outline-container-org5960f1d" class="outline-3">
-<h3 id="org5960f1d">RDD基础</h3>
-<div class="outline-text-3" id="text-org5960f1d">
+<div id="outline-container-org751c278" class="outline-3">
+<h3 id="org751c278">RDD基础</h3>
+<div class="outline-text-3" id="text-org751c278">
 <p>
 Spark中的RDD是一个不可变的分布式对象集合
 </p>
@@ -83,30 +83,30 @@ Spark中的RDD是一个不可变的分布式对象集合
 </div>
 </div>
 
-<div id="outline-container-orgd7e3ae2" class="outline-2">
-<h2 id="orgd7e3ae2">spark use</h2>
-<div class="outline-text-2" id="text-orgd7e3ae2">
+<div id="outline-container-org194dbc1" class="outline-2">
+<h2 id="org194dbc1">spark use</h2>
+<div class="outline-text-2" id="text-org194dbc1">
 </div>
-<div id="outline-container-orgf035c97" class="outline-3">
-<h3 id="orgf035c97">spark base</h3>
-<div class="outline-text-3" id="text-orgf035c97">
+<div id="outline-container-org9c43c1b" class="outline-3">
+<h3 id="org9c43c1b">spark base</h3>
+<div class="outline-text-3" id="text-org9c43c1b">
 <p>
 rdd(resilient distributed dataset)
 </p>
 </div>
 </div>
-<div id="outline-container-org8507724" class="outline-3">
-<h3 id="org8507724">spark install</h3>
-<div class="outline-text-3" id="text-org8507724">
+<div id="outline-container-org6577d3e" class="outline-3">
+<h3 id="org6577d3e">spark install</h3>
+<div class="outline-text-3" id="text-org6577d3e">
 <p>
 函数式编程
 shell下执行:paste
 </p>
 </div>
 </div>
-<div id="outline-container-org1893ddc" class="outline-3">
-<h3 id="org1893ddc">spark shell</h3>
-<div class="outline-text-3" id="text-org1893ddc">
+<div id="outline-container-org0c8468c" class="outline-3">
+<h3 id="org0c8468c">spark shell</h3>
+<div class="outline-text-3" id="text-org0c8468c">
 <p>
 bin/spark-shell
 </p>
@@ -126,9 +126,9 @@ filter()</li>
 </div>
 </div>
 
-<div id="outline-container-orgc61b078" class="outline-3">
-<h3 id="orgc61b078">idea spark scala</h3>
-<div class="outline-text-3" id="text-orgc61b078">
+<div id="outline-container-org6fe0282" class="outline-3">
+<h3 id="org6fe0282">idea spark scala</h3>
+<div class="outline-text-3" id="text-org6fe0282">
 <p>
 scala 项目手动打包
 删除scala 和spark的包
@@ -144,25 +144,25 @@ sbt 构建项目 需要等待sbt版本下载好才会生成src目录
 </div>
 </div>
 
-<div id="outline-container-org1acedc8" class="outline-3">
-<h3 id="org1acedc8">idea spark java</h3>
-<div class="outline-text-3" id="text-org1acedc8">
+<div id="outline-container-org7518964" class="outline-3">
+<h3 id="org7518964">idea spark java</h3>
+<div class="outline-text-3" id="text-org7518964">
 <ol class="org-ol">
 <li>jre 1.5 换成1.8</li>
 </ol>
 </div>
 </div>
-<div id="outline-container-org496cc70" class="outline-3">
-<h3 id="org496cc70">rdd &amp; dataframe</h3>
+<div id="outline-container-org397fc71" class="outline-3">
+<h3 id="org397fc71">rdd &amp; dataframe</h3>
 </div>
 </div>
-<div id="outline-container-org8048761" class="outline-2">
-<h2 id="org8048761">docker spark</h2>
-<div class="outline-text-2" id="text-org8048761">
+<div id="outline-container-org7486f04" class="outline-2">
+<h2 id="org7486f04">docker spark</h2>
+<div class="outline-text-2" id="text-org7486f04">
 </div>
-<div id="outline-container-orgec12fe9" class="outline-3">
-<h3 id="orgec12fe9">docker for mac install spark 2.2.0 + hadoop 2.8.0</h3>
-<div class="outline-text-3" id="text-orgec12fe9">
+<div id="outline-container-org5f93ba7" class="outline-3">
+<h3 id="org5f93ba7">docker for mac install spark 2.2.0 + hadoop 2.8.0</h3>
+<div class="outline-text-3" id="text-org5f93ba7">
 <p>
 refer : <a href="http://blog.csdn.net/gogo_yao/article/details/76863201">http://blog.csdn.net/gogo_yao/article/details/76863201</a>
 </p>
@@ -213,17 +213,17 @@ cd <i>root</i>.local/spark-2.2.0-bin-without-hadoop/sbin; sh start-all.sh
 </ol>
 </div>
 </div>
-<div id="outline-container-orgd146dc4" class="outline-3">
-<h3 id="orgd146dc4">docker search spark</h3>
-<div class="outline-text-3" id="text-orgd146dc4">
+<div id="outline-container-orgb48b5ac" class="outline-3">
+<h3 id="orgb48b5ac">docker search spark</h3>
+<div class="outline-text-3" id="text-orgb48b5ac">
 <p>
 docker pull sequenceiq/spark:1.6.0
 </p>
 </div>
 </div>
 </div>
-<div id="outline-container-org09c2816" class="outline-2">
-<h2 id="org09c2816">docker hbase</h2>
+<div id="outline-container-org9be42d3" class="outline-2">
+<h2 id="org9be42d3">docker hbase</h2>
 </div>
 
 </div>
